<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">

    <!-- Agregar Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:elevation="4dp"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-180dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp">

            <!-- Botón de retorno (flecha) -->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_exit_to_app_24" />

            <!-- Título centrado -->

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/button1"
        android:layout_width="223dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/red_orange"
        android:scrollbarSize="20dp"
        android:text="@string/presentación"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/red_orange"
        android:text="@string/chiste"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myToolbar"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/button3"
        android:layout_width="223dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/red_orange"
        android:text="@string/guardado"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>