<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".JokeGeneratorActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:text="@string/si"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="397dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:scrollbarSize="22dp"
        android:text="@string/leer"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_creada"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:background="@color/sky_blue"
        android:elevation="4dp"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Botón de retorno (flecha) -->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_arrow_back_24" />

            <!-- Título centrado -->
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="50dp"
                android:text="@string/chiste"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>